--- a/bookstoremanager/pom.xml
+++ b/bookstoremanager/pom.xml
@@ -64,6 +64,16 @@
         	<artifactId>mapstruct</artifactId>
         	<version>${org.mapstruct.version}</version>
     	</dependency>
+    	<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.9.8</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.github.javafaker</groupId>
+    		<artifactId>javafaker</artifactId>
+    		<version>0.15</version>
+		</dependency>
 	</dependencies>
 
 	<build>
